--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .input{
-  @apply p-2 pl-0 border-b-2 border-lime-800 focus:outline-none
+  @apply w-full p-2 pl-0 border-b-2 border-lime-800 focus:outline-none
 }
 .button{
   @apply p-3 text-white bg-lime-800 font-semibold rounded-lg mt-5 font-serif hover:bg-lime-900
