ui change commit-4

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ input:checked {
   background-color: green;
 }
 .login{
-  background: url("./images/bg.svg");
+  background: url("/images/bg.svg");
   background-size: cover;
   background-repeat: no-repeat;
 }
