--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.bg-color{
-  background-color: #090091;
-}
-.input {
-  @apply w-full p-2 rounded-xl mt-4 border-b-2 border-b-orange-950 focus:outline-none placeholder:text-orange-900 placeholder:text-opacity-50
-}
-
-.button {
-  @apply p-3 text-white bg-orange-950 font-semibold rounded-xl mt-5 font-serif hover:bg-green-950
-}
-
-.primary-bg {
-  @apply w-screen flex flex-col 
-}
-
-input:checked {
-  background-color: green;
-}
-.login{
-  background: url("/images/bg.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
+.basic-input-field input{
+    @apply w-full bg-transparent pb-2 border-b-2 border-sky-900 focus:outline-none focus:ring-0
 }
